--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha03'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     
 
